<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exchange Engine</string>
    <string name="Bouton_Connexion">Se Connecter</string>
    <string name="Bouton_Inscription">S\'inscrire</string>
    <string name="Bouton_Photo">Prendre une photo</string>
    <string name="nouvel_objet_titre">Titre :</string>
    <string name="nouvel_objet_mail">Mail :</string>
    <string name="nouvel_objet_categorie">Catégorie :</string>
    <string name="nouvel_objet_description">Description :</string>
    <string name="nouvel_objet_couleur">Couleur :</string>
    <string name="nouvel_objet_telephone">Téléphone :</string>
    <string name="nouvel_objet_zone">Région :</string>
    <string name="nouvel_objet_url">Url image :</string>
    <string name="nouvel_objet_bouton_envoyer">Envoyer</string>
    <string name="accueil_bouton_mes_objets">Mes Objets</string>
    <string name="accueil_bouton_ajouter_objet">Ajouter Objet</string>
    <string name="accueil_bouton_recherche">Recherche</string>
    <string name="accueil_bouton_contrat">Générer un contrat</string>
    <string name="main_identifiant">Identifiant :</string>
    <string name="main_motdepasse">Mot de passe :</string>
    <string name="inscription_nom">Nom :</string>
    <string name="inscription_prnom">Prénom :</string>
    <string name="inscription_motdepasse">Retapez votre mot de passe :</string>
    <string name="inscription_adresse">Adresse mail :</string>
    <string name="inscription_bouton_retour">Déjà un compte</string>

</resources>
