<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription_nom" />

    <EditText
        android:id="@+id/nomUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:capitalize="none"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription_prnom" />

    <EditText
        android:id="@+id/prenomUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:capitalize="characters"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_motdepasse" />

    <EditText
        android:id="@+id/mdpUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription_motdepasse" />

    <EditText
        android:id="@+id/verifMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription_adresse" />

    <EditText
        android:id="@+id/mailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonsinscrire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bouton_Inscription" />

    <Button
        android:id="@+id/buttonretour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription_bouton_retour" />

</LinearLayout>
