<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@null"/>

    <Button
        android:id="@+id/buttonconnexion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/motdepasse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/Bouton_Connexion" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/main_identifiant" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_centerVertical="true"
        android:text="@string/main_motdepasse" />

    <EditText
        android:id="@+id/identifiant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/motdepasse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/identifiant"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttoninscription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonconnexion"
        android:text="@string/Bouton_Inscription" />

</RelativeLayout>
